# PREN1G11

./: .env  .env.example  .flake8  .gitignore  Dockerfile  HOWTOACCESSRASPY.md  LICENSE  README.md  chassis_with_obstacle.mtl  chassis_without_obstacle.mtl  docker-compose.override.yml  docker-compose.yml  hindernis.mtl  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
Simulator/worlds/: .SimulatorPren.wbproj  SimulatorPren.wbt
roboter_final/: Camera.py  CheckConection.py  DegreeInMs.py  ErkannteObjekte.py  YoloDetector.py  __main__.py  communication.py  get_picture.py  handle_uart_responses.py  lineDetection.py  main.py
roboter_final/Graph/: Box.py  CanvasInterface.py  Cylinder.py  Graph.py  Graph_loader.py  Shape.py  base_graph.json  graph_data.json  main.py
roboter_final/dummy_data/: detected_objects.txt
scripts/: install.sh
scripts/roboter_final/: CheckConection.py  ErkannteObjekte.py  Matrix.py  Objekt.py  YoloDetector.py  communication.py  get_picture.py  main.py
scripts/roboter_final/Graph/: CanvasInterface.py  Graph.py  Graph_loader.py  base_graph.json  main.py
scripts/roboter_final/dummy_data/: F.txt
scripts/work/: main.py
scripts/work/pictures/: TestYOLO.py
simulator/controllers/CreateGraphInWbt/: Box.py  CanvasInterface.py  CreateGraphInWbt.py  Graph.py  Roboter.py  SetWebotsColor.py
simulator/controllers/GraphGenerator/: GraphEditor.py  JsonToWbt.py  obstacle.stl  (+2 more)
simulator/worlds/: .simulator.wbproj  simulator.wbt
src/: helloworld.py  main.py  ocv.py
src/robot/: start-robot.sh
src/utils/: configure_logger.py
(+82 files in other folders)
