[tool.poetry]
package-mode = false
name = "PREN1"
version = "0.0.0"
description = "PREN1 Gruppe 11"
authors = [
    "Dan Livingston <dan.livingston@stud.hslu.ch>",
    "Eric Lindegger <eric.lindeggern@stud.hslu.ch",
    "Rita Schmid <rita.schmidn@stud.hslu.ch",
    "Stefan Abgottspon <stefan.abgottsponn@stud.hslu.ch",
    "Timon Maag <timon.maagn@stud.hslu.ch",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timonenbonen/PREN1G11"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
opencv-python-headless = "^4.10.0.84"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
isort = "^5.13.2"
pytest = "^8.3.3"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
